# wolle

./: .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  README.md  action.html  debug.html  eslint.config.cjs  eslint.sarif  index.html  package-lock.json  package.json  status.html  tsconfig.json  tsconfig.prune.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: prd.instructions.md  progress.instructions.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  ossar.yml  tray-check.yml
docs/: dumpbin_artifact_summary.txt  windows-native-imports.md
icons/: Sheep Icon.url
src/: a11y.ts  action.ts  clipboard.ts  debug.ts  dom.js  dom.ts  events.ts  fluent.d.ts  main.js  main.ts  settings.ts  status.ts  tauri.ts  ui.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: ingest.rs  main.rs  ollama.rs  utils.rs
src/__tests__/: copy.test.ts  dom.test.js  dom.test.ts  dom_helper.test.ts  fluent-ui-run-button.test.ts  tauri.test.ts
tools/: check_tray_imports.ps1  run_dumpbin_artifacts.ps1  rust-udeps.ps1  send-payload.ps1  webview2-preflight.ps1
