[package]
name = "wolle-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tauri dependency: enable default features, but don't enable system-tray
# unless our feature requests it via the `tray` feature below.
tauri = { version = "2.8.4", default-features = false, features = ["wry"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
once_cell = "1.17"
anyhow = "1.0"

[features]
# Enable Tauri's system-tray API and the tray-icon dependency only when our
# local 'tray' feature is selected. 'system-tray' exposes the SystemTray
# types and Builder APIs; 'tray-icon' pulls in the platform implementation.
tray = ["tauri/tray-icon"]


