[package]
name = "wolle-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tauri dependency: enable default features, but don't enable system-tray
# unless our feature requests it via the `tray` feature below.
tauri = { version = "2.8.4", default-features = false, features = ["webview2-com", "wry"] }
tauri-runtime = "2.8.0"
# Use the wry runtime crate directly for the concrete runtime type on Windows.
# Keep default features disabled so platform-specific optional deps (gtk, webkit2gtk)
# are not enabled for other targets.
tauri-runtime-wry = { version = "2.8.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1.0"
once_cell = "1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
winreg = "0.52"
tauri-plugin-single-instance = "2"
ico = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
pdf-extract = "0.8"
base64 = "0.22"

[features]
# Enable Tauri's system-tray API and the tray-icon dependency only when our
# local 'tray' feature is selected. 'system-tray' exposes the SystemTray
# types and Builder APIs; 'tray-icon' pulls in the platform implementation.
tray = ["tauri/tray-icon"]


